[project]
name = "gleason-net"
version = "0.1.2"
description = "Prostate Gleason Trainer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
  "torch>=2.6.0",
  "torchvision>=0.15.0",
]

[tool.uv]
# Ensure wheels exist for Linux ARM (aarch64) platform
required-environments = ["sys_platform == 'linux' and platform_machine == 'aarch64'"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  # Use CUDA 12.4 wheels on x86_64 Linux or Windows
  { index = "pytorch-cu124", marker = "(sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'win32'" },
  # Use CUDA 12.6 wheels on Linux aarch64 (ARM)
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
torchvision = [
  { index = "pytorch-cu124", marker = "(sys_platform == 'linux' and platform_machine == 'x86_64') or sys_platform == 'win32'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
